# Proyecto_FakeNews

./: README.md
docs/acceptance/: exit_report.md
docs/business_understanding/: project_charter.md
docs/data/: Definicion de los Datos.md  datas_summary.md  dictionary.md
docs/data_dictionary/: data_dictionary.md
docs/deployment/: deploymentdoc.md  requirements.txt
docs/modeling/: baseline_models.md  model_report.md
scripts/data_acquisition/: data_acquisition.py
scripts/eda/: PROYECTO_FAKE_NEWS.ipynb  PROYECTO_FAKE_NEWS_(Despliegue).ipynb
scripts/evaluation/: Evaluation.py
scripts/evaluation/models/: Ejecutar_Modelo.py  MLmodel  Verificar_Noticia.py  conda.yaml  requirements.txt
src/: Analisis_Exploratorio.py  Limpieza_de_Datos.py  Tipos_de_variables.py  mlcli.py  pyproject.toml
src/data_ingestion/: Analisis_Exploratorio.py  Limpieza_de_Datos.py  Tipos_de_variables.py  load_data.py
src/nombre_paquete/models/: DOC2V.py  Exploration_Embbeding.py  Implementation.py  Model.py  TF-IDF.py  Tipo_de_ Modelamiento  Tipo_de_ Modelamiento.py
src/nombre_paquete/training/: Doc2Vec - XGBoost.py  Entrenamiento_Hiperparámetros.py
src/nombre_paquete/visualization/: Evaluación o Aplicación del modelo.py
